Added the about section, also did some designing

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
     <link rel="icon" type="image/png" href="img/techis-logo.png" />
     <link
       rel="stylesheet"
@@ -42,6 +43,25 @@
         </div>
       </div>
     </nav>
+
+    <div id="about">
+        <h2><span class="font-primary">A</span>bout</h2>
+        <img src="https://ca.slack-edge.com/T01360WELP6-U03S579NTDJ-f54321585b97-512">
+        <div name="Sierra Ellerby"</div>
+        <div class="vocation">Web Application Developer</div>
+        <div class="skills">HTML / CSS / JavaScript / React.js / Redux / Python / Django / Express.js / AWS(Basics) / Docker (Basics)</div>
+        <p>
+            I am passionate about solving business problems through human-centered design. Curious by nature and business-minded.
+        </p>
+        <div class="email">sellerby1121@icloud.com</div>
+        <div class="icons">
+            <a href="#https://app.slack.com/client/T01360WELP6/C012YDW87TP/rimeto_profile/U03S579NTDJ"><i class="bi bi-github"></i></a>
+            <a href="#"><i class="bi bi-linkedin ms-3"></i></a>
+        </div>
+
+
+    </div>
+
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
