Added the project section and some designing

--- a/index.html
+++ b/index.html
@@ -51,15 +51,59 @@
         <div class="vocation">Web Application Developer</div>
         <div class="skills">HTML / CSS / JavaScript / React.js / Redux / Python / Django / Express.js / AWS(Basics) / Docker (Basics)</div>
         <p>
-            I am passionate about solving business problems through human-centered design. Curious by nature and business-minded.
+            Very passionate about creating interactive applications and experiences on the web. Also enjoys combining the worlds of logic and creative designs to make eye-catching, accessible, and user-friendly websites and applications.
         </p>
         <div class="email">sellerby1121@icloud.com</div>
         <div class="icons">
             <a href="#https://app.slack.com/client/T01360WELP6/C012YDW87TP/rimeto_profile/U03S579NTDJ"><i class="bi bi-github"></i></a>
             <a href="#"><i class="bi bi-linkedin ms-3"></i></a>
         </div>
+    </div>
 
 
+    <div id="project">
+        <h2><span class="font-primary">P</span>rojects</h2>
+
+        <div class="card mb-3">
+            <div class="row">
+              <div class="col-md-4">
+                <img src="img/project-twitter.png" alt="Twitter Project">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">Twitter Clone</h5>
+                  <p class="card-text">This is a Twitter based project.</p>
+                  <p class="card-text"><small class="text-muted"></small>
+                    Test Login Account <br>
+                    Email : test@gmail.com <br>
+                    Password: 1234
+                    </p></small>
+                    <a href="http://127.0.0.1:5500/portfolio/index.html" target="_blank" class="btn btn-secondary">Website Link</a>
+                    <a href="https://github.com/sellerby" target="_blank" class="btn btn-secondary">Github link</a>
+                </div>
+              </div>
+            </div>
+          </div>
+    </div>
+
+    <div class="card mb-3">
+        <div class="row">
+            <div class="col-md-4">
+                <img src="img/project-netflix.png" alt="Netflix Project">
+            </div>
+            <div class="col-md-8">
+                <div class="card-body">
+                    <h5 class="card-title">Netflix Clone</h5>
+                    <p class="card-text">This is a Netflix based project.</p>
+                    <p class="card-text"><small class="text-mute"></small>
+                        Test Login: test@gmail.com <br>
+                        Password: 1234 <br>
+                        </p></small>
+                        <a href="http://127.0.0.1:5500/portfolio/index.html" target="_blank" class="btn btn-secondary">Website Link</a>
+                        <a href="https://github.com/sellerby" target="_blank" class="btn btn-secondary">Github Link</a>
+                </div>
+            </div>
+        </div>
     </div>
 
 
